--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,7 @@ Core:
 - `lighttpd_version_history`:	Retrieve lighttpd Version Release History
 - `mongodb_version_history`:	Retrieve MongoDB Version Release History
 - `nginx_version_history`:	Retrieve nginx Version Release History
+- `openresty_version_history`:	Retrieve openresty Version Release History
 - `sendmail_version_history`:	Retrieve sendmail Version Release History
 
 Utility:
@@ -48,7 +49,7 @@ packageVersion("vershist")
 
 Apache
 
-```{r}
+```{r apache}
 apache_httpd_version_history()
 ```
 
@@ -68,6 +69,12 @@ nginx
 
 ```{r}
 nginx_version_history()
+```
+
+openresty
+
+```{r}
+openresty_version_history()
 ```
 
 sendmail
