--- a/README.Rmd
+++ b/README.Rmd
@@ -31,6 +31,7 @@ Core:
 - `openssh_version_history`:	Retrieve OpenSSH Version Release History
 - `sendmail_version_history`:	Retrieve sendmail Version Release History
 - `sqlite_version_history`:	Retrieve sqlite Version Release History
+- `tomcat_version_history`:	Retrieve Apache Tomcat Version Release History
 
 Utility:
 
@@ -139,4 +140,10 @@ sendmail
 
 ```{r sendmail, cache=TRUE}
 sendmail_version_history()
+```
+
+Tomcat
+
+```{r tomcat, cache=TRUE}
+tomcat_version_history()
 ```
