added citrix netscaler

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,6 +28,7 @@ Core:
 
 - `apache_httpd_version_history`: Retrieve Apache httpd Version Release History
 - `apple_ios_version_history`:  Retrieve Apple iOS Version Release History
+- `citrix_netscaler_version_history`: Citrix Netscaler ADC Version History
 - `etcd_version_history`: Retrieve etcd Version Release History
 - `google_chrome_version_history`:  Retrieve Google Chrome Version Release History
 - `isc_bind_version_history` : Retrieve ISC BIND Version Release History
